# lab

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  renovate.json
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  keyword_support.yml
.github/workflows/: audit.yml  ci.yml  release.yml
crates/lab-cli/: Cargo.toml
crates/lab-cli/src/: cli.rs  display.rs  logging.rs  main.rs  mcp.rs
crates/lab-core/: Cargo.toml
crates/lab-core/src/: analyze.rs  artifacts.rs  cache.rs  config.rs  error.rs  lib.rs  paths.rs  secrets.rs
crates/lab-core/src/docker/: client.rs  container.rs  mod.rs  network.rs  service.rs
crates/lab-core/src/model/: job.rs  mod.rs  pipeline.rs  rules.rs  variables.rs
crates/lab-core/src/parser/: mod.rs  resolver.rs  schema.rs  yaml.rs
crates/lab-core/src/planner/: dag.rs  mod.rs
crates/lab-core/src/runner/: executor.rs  job_context.rs  mod.rs  output.rs  runner.rs  script.rs
crates/lab-core/tests/: analyze.rs  config.rs  keywords.rs  spec_examples.rs
docs/: gitlab-ci-reference.md
tests/fixtures/: artifacts-pipeline.yml  complex-pipeline.yml  matrix-pipeline.yml  real-world-pipeline.yml  services-pipeline.yml  simple-pipeline.yml
