[workspace]
resolver = "2"
members = ["crates/lab-core", "crates/lab-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/grok-rs/lab"

[workspace.dependencies]
lab-core = { path = "crates/lab-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"

# Docker
bollard = "0.19"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Logging & Output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
console = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
indexmap = { version = "2", features = ["serde"] }
regex = "1"
glob = "0.3"
globset = "0.4"
gix = { version = "0.81", default-features = false, features = ["revision", "attributes"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
