[package]
name = "lab-cli"
description = "CLI for running GitLab CI/CD pipelines locally"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "lab"
path = "src/main.rs"

[dependencies]
lab-core = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
