[package]
name = "lab-core"
description = "Core library for running GitLab CI/CD pipelines locally"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
bollard = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
gix = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
